--- a/_posts/2024-12-16-blog3.md
+++ b/_posts/2024-12-16-blog3.md
@@ -1,5 +1,5 @@
 ---
-title: "Creating a blog site driven by github pages?"
+title: "Creating a blog site driven by github pages"
 date: 2024-12-16
 ---
 
