--- a/_posts/2024-12-22-pikachu.md
+++ b/_posts/2024-12-22-pikachu.md
@@ -10,3 +10,5 @@ On our way home, my son opened the pack and was thrilled to find a card of [Pika
 
 [Pikachu](https://github.com/qsongatwpi/blogs/blob/main/_posts/img/Pikachu.png)
 
+![](img/Pikachu.png)
+
